package Architecture_op.HW_3;

abstract class Phone {
    abstract void Call();
}
