package Architecture_op.HW_3;

// 
public interface PhoneFunctionsNokia {
    void SendSMS();
    void Bluetooth();
    void PhotoShooting();

}
