package Architecture_op.HW_3;

public interface PhoneFunctionsSamsung {
    void SendSMS();
    void SendEMail();
    void Bluetooth();
    void PhotoVideoShooting();


}
