package Architecture_op.HW_3;

public interface PhoneFunctionsSony {
    void SendSMS();
    void SendEMail();
    void PhotoVideoShooting();
}
